smartdot p5js update
- created index.html
- created main
- created dot.js and added a dot class

--- a/GA-smartdot - P5js/index.html
+++ b/GA-smartdot - P5js/index.html
@@ -3,10 +3,6 @@
         <title>Smartdot-GA</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script src="sketch.js"></script>
+        <script src="dot.js"></script>
     </head>
-
-    <body>
-        
-    </body>
-
 </html>
