Update smartdot p5js
- added brain
- new window system

--- a/GA-smartdot - P5js/index.html
+++ b/GA-smartdot - P5js/index.html
@@ -4,5 +4,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script src="sketch.js"></script>
         <script src="dot.js"></script>
+        <script src="brain.js"></script>
     </head>
 </html>
