--- a/GA-smartdot - P5js/index.html
+++ b/GA-smartdot - P5js/index.html
@@ -5,5 +5,6 @@
         <script src="sketch.js"></script>
         <script src="dot.js"></script>
         <script src="brain.js"></script>
+        <script src='population.js'></script>
     </head>
 </html>
