--- a/Smartdots-P5.js/index.html
+++ b/Smartdots-P5.js/index.html
@@ -1,11 +1,16 @@
 <html>
-    <head>
-        <title>Smartdots-P5.js</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-        
-        <!-- all javascript files-->
-        <script scr='sketch.js'></script>
-        
-    </head>
-</html>
+<head>
+  <title>Smart Rockets </title>
+  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+  <!-- uncomment lines below to include extra p5 libraries -->
+  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+  <!--<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>-->
+  <script language="javascript" type="text/javascript" src="dna.js"></script>
+  <script language="javascript" type="text/javascript" src="population.js"></script>
+  <script language="javascript" type="text/javascript" src="rocket.js"></script>
 
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+</head>
+<body>
+
+</body>
