--- a/Smartdots-P5.js/index.html
+++ b/Smartdots-P5.js/index.html
@@ -7,7 +7,7 @@
   <!--<script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>-->
   <script language="javascript" type="text/javascript" src="dna.js"></script>
   <script language="javascript" type="text/javascript" src="population.js"></script>
-  <script language="javascript" type="text/javascript" src="rocket.js"></script>
+  <script language="javascript" type="text/javascript" src="dot.js"></script>
 
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
