Update evo-project food
- added basic food class

--- a/Evo project/index.html
+++ b/Evo project/index.html
@@ -7,5 +7,7 @@
         <!-- Javascript files-->
         <script src='ecosystem.js'></script>
         <script src='dot.js'></script>
+        <script src='food.js'></script>
+  
     </body>
 </html>
