--- a/Evo project/index.html
+++ b/Evo project/index.html
@@ -8,6 +8,7 @@
         <script src='ecosystem.js'></script>
         <script src='dot.js'></script>
         <script src='food.js'></script>
+        <script src='DNA.js'></script>
   
     </body>
 </html>
