Update Evo Project
debugFunctions
- Created new file debugFunctions to store all support functions

Dot
- fixed pause / unpause debugging function for the energyController
- created functionality that when a new dot just spawned in it gets a random target assigned for movement

Ecosystem
- fixed dubble counting generation

--- a/Evo project/index.html
+++ b/Evo project/index.html
@@ -9,6 +9,9 @@
         <script src='dot.js'></script>
         <script src='food.js'></script>
         <script src='DNA.js'></script>
+
+        <!-- Support files-->
+        <script src='debugFunctions.js'></script>
   
     </body>
 </html>
