Update - Remodel-Selection-Matingpool
Ecosystem
- changed Selection() to new file genetic.js
- deleted gimmeBaby function
- deleted crossover function
- removed all debug functions

Food
- created color in constructor()

Genetic
- created new Selection() function issue #37
- added new matingpool issue #36
- added issue #30
- added control selection proces
- created reproduceSingle()
* must add reproducePartner()

--- a/Evo project/index.html
+++ b/Evo project/index.html
@@ -9,6 +9,7 @@
         <script src='dot.js'></script>
         <script src='food.js'></script>
         <script src='DNA.js'></script>
+        <script src='genetic.js'></script>
 
         <!-- Support files-->
         <script src='debugFunctions.js'></script>
