Created Saving mechanism
Added saving as an CSV file (csv.js gives download function and configureData function).

Data is saved as an CSV file an can be opened in excel of in another webbrowser.

--- a/Evo Project V2/index.html
+++ b/Evo Project V2/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <title>Evo Project V1.1</title>
+        <title>Evo Project V2</title>
         <!-- Imported libraries-->
         <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
 
@@ -11,8 +11,12 @@
         <script src='DNA.js'></script>
         <script src='genetic.js'></script>
 
+        <!-- Download CSV File-->
+        <script src='csv.js'></script>
+
         <!-- Support files-->
         <script src='debugFunctions.js'></script>
   
+        <button onclick='download_csv()'> Download CSV</button>
     </body>
 </html>
