--- a/Gen_Testing/index.html
+++ b/Gen_Testing/index.html
@@ -1,7 +1,9 @@
 <html>
     <body>
-        <title>Testing Generations</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-        <script src='steering.js'></script>
-    </body>
+        <title>Testing Database</title>
+        <script src='app.js'></script>   
+        <script src='csv.js'></script>
+
+        <button onclick='download_csv()'> Download CSV</button>
+    </body>  
 </html>
