--- a/GraphingEvo/index.html
+++ b/GraphingEvo/index.html
@@ -27,8 +27,8 @@
                   label: 'Population each generation',
                   data: data.ys,
                   fill: true,
-                  backgroundColor: 'rgba(255,99,132,0.2)',
-                  borderColor: 'rgba(255,99,132,1)',
+                  backgroundColor: 'rgba(0, 0, 0, 0.4)',
+                  borderColor: 'rgba(0, 0, 0, 1)',
                   borderWidth: 1
 
               }]
